--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <title class="pdf-name">Hope Acts</title>
   </head>
@@ -224,7 +224,7 @@
 
     <section class="container pdf-file">
       <div class="pdf-file-header">
-        <img src="./src/images/HopeLogo.jpg" alt="">
+        <img src="./images/HopeLogo.jpg" alt="">
         <h3>Work Permit Clinic</h3>
         <span class="pdf-date">08/16/2024</span>
       </div>
@@ -417,6 +417,6 @@
 
     </section>
 
-    <script src="./src/js/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
