PDF file name fixed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h1>Hope Acts</h1>
           <p>
             Hope Acts is a non-profit organization that provides support to the
-            homeless in the Portland, Maine area.
+            immigrants in the Portland, Maine area.
           </p>
 
           <a href="https://hopeacts.org/" target="_blank">Our Website</a>
