--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="./style.css" />
 
+    <link rel="shortcut icon" href="./images/HopeLogo.jpg" type="image/x-icon">
+
     <title class="pdf-name">Hope Acts</title>
   </head>
   <body>
@@ -219,7 +221,11 @@
         </div>
       </div>
 
-      <footer class="footer">Footer Links...</footer>
+      <footer class="footer">
+        <a href="https://josuezolakiomd.github.io/modern-linktree/" class="footer-box box-1" target="_blank">The Creator</a>
+        <a href="https://hopeacts.org/" class="footer-box box-2" target="_blank">Hope Acts</a>
+        <a href="https://chatgpt.com/" class="footer-box box-3" target="_blank">ChatGPT</a>
+      </footer>
     </main>
 
     <section class="container pdf-file">
